--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #FFFFFF;
 }
 nav ul li {
   list-style-type: none;
@@ -72,10 +73,10 @@ footer {
 }
 
 .intro_text {
-  position: absolute;
+  /* position: absolute; */
   /* top: 300px; */
   margin-top: 220px;
-  left: 30px;
+  /* left: 30px; */
 }
 
 .intro_text h1 {
@@ -105,3 +106,25 @@ background: #FFFFFF;
 box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1);
 border-radius: 4px;
 }
+
+/* movers */
+.movers {
+  margin-top: 100px;
+}
+
+movers-text {
+
+}
+
+/* services-intro */
+
+.services-bg {
+  height: 393px;
+  background-image: url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576346297/image_3_1_n2jbwk.png");
+}
+
+.services-intro h2 {
+  margin-top: -250px;
+}
+
+/*  */
