--- a/styles.css
+++ b/styles.css
@@ -109,22 +109,85 @@ border-radius: 4px;
 
 /* movers */
 .movers {
-  margin-top: 100px;
+  margin-top: 140px;
 }
 
-movers-text {
+.movers-text h5 {
+  font-weight: bold;
+  color: #ffb800;
+  font-size: 18px;
+}
 
+.movers-text p {
+  font-size: 18px;
+  color: #4F4F4F;
+}
+
+.movers-text h2 {
+font-weight: normal;
+color: #4F4F4F;
+font-size: 48px;
 }
 
 /* services-intro */
 
 .services-bg {
   height: 393px;
+  margin-bottom: 100px;
   background-image: url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576346297/image_3_1_n2jbwk.png");
 }
 
 .services-intro h2 {
-  margin-top: -250px;
+  margin-top: -310px;
 }
 
 /*  */
+.choose-movers {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+h5 {
+  font-weight: bold;
+  color: #ffb800;
+  font-size: 18px;
+}
+
+h2 {
+  font-weight: normal;
+  color: #4f4f4f;
+  font-size: 48px;
+}
+
+.choose h2 {
+  font-weight: bold;
+  color: #ffb800;
+  font-size: 48px;
+}
+
+.choose h3 {
+  font-weight: bold;
+  color: #4f4f4f;
+  font-size: 36px;
+}
+p {
+  color: #4f4f4f;
+  font-size: 18px;
+}
+
+.choose span {
+  font-weight: bold;
+  color: #ffb800;
+  font-size: 14px;
+}
+
+/*  */
+.services p {
+  color: #4f4f4f;
+  font-size: 24px;
+}
+
+/*  */
+.footer {
+  margin-top: 100px;
+}
