--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-color: #FFFFFF;
+  overflow-x: hidden;
 }
 nav ul li {
   list-style-type: none;
@@ -190,4 +191,9 @@ p {
 /*  */
 .footer {
   margin-top: 100px;
+}
+
+.social-links {
+  height: 5vh;
+  width: 5vh;
 }
