--- a/styles.css
+++ b/styles.css
@@ -66,11 +66,11 @@ footer {
 
 /* first section */
 .first_section {
-  /* height: 100vh; */
-  /* position: relative; */
+  background: rgba(0, 0, 0, 0.37);
   background-position: center;
   height: 607px;
-  background-image: url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576163777/image_1_d4zjmf.png");
+  background-image: linear-gradient(to bottom, rgba(46, 53, 48, 0.52), rgba(27, 25, 27, 0.73)),
+  url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576163777/image_1_d4zjmf.png");
 }
 
 .intro_text {
@@ -135,11 +135,13 @@ font-size: 48px;
 .services-bg {
   height: 393px;
   margin-bottom: 100px;
-  background-image: url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576346297/image_3_1_n2jbwk.png");
+  background-image: linear-gradient(to bottom, rgba(255, 188, 2, 0.52), rgba(255, 209, 6, 0.73)),
+  url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576346297/image_3_1_n2jbwk.png");
 }
 
 .services-intro h2 {
   margin-top: -310px;
+  color: #ffffff;
 }
 
 /*  */
