--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@ body {
   box-sizing: border-box;
   background-color: #FFFFFF;
   overflow-x: hidden;
+  font-family: 'Roboto',
+  sans-serif;
 }
 nav ul li {
   list-style-type: none;
