--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,9 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   overflow-x: hidden;
-  font-family: 'Roboto',
-  sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 nav ul li {
   list-style-type: none;
@@ -30,6 +29,11 @@ nav ul li {
 
 .logo img {
   width: 170px;
+}
+
+.hide-modal {
+  background: #ffb800;
+  color: #ffffff;
 }
 
 footer ul li {
@@ -71,20 +75,20 @@ footer {
   background: rgba(0, 0, 0, 0.37);
   background-position: center;
   height: 607px;
-  background-image: linear-gradient(to bottom, rgba(46, 53, 48, 0.52), rgba(27, 25, 27, 0.73)),
-  url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576163777/image_1_d4zjmf.png");
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 53, 48, 0.52),
+      rgba(27, 25, 27, 0.73)
+    ),
+    url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576163777/image_1_d4zjmf.png");
 }
 
 .intro_text {
-  /* position: absolute; */
-  /* top: 300px; */
   margin-top: 220px;
-  /* left: 30px; */
 }
 
 .intro_text h1 {
   font-weight: bold;
-  /* font-size: 48px; */
   font-size: 2.5rem;
   line-height: 56px;
   color: #ffffff;
@@ -102,12 +106,12 @@ footer {
 /* next move container */
 .next-move {
   position: absolute;
-left: 40px;
-right: 40px;
-margin-top: -100px;
-background: #FFFFFF;
-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1);
-border-radius: 4px;
+  left: 40px;
+  right: 40px;
+  margin-top: -100px;
+  background: #ffffff;
+  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
 }
 
 /* movers */
@@ -123,30 +127,33 @@ border-radius: 4px;
 
 .movers-text p {
   font-size: 18px;
-  color: #4F4F4F;
+  color: #4f4f4f;
 }
 
 .movers-text h2 {
-font-weight: normal;
-color: #4F4F4F;
-font-size: 48px;
+  font-weight: normal;
+  color: #4f4f4f;
+  font-size: 48px;
 }
 
 /* services-intro */
-
 .services-bg {
   height: 393px;
   margin-bottom: 100px;
-  background-image: linear-gradient(to bottom, rgba(255, 188, 2, 0.52), rgba(255, 209, 6, 0.73)),
-  url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576346297/image_3_1_n2jbwk.png");
+  background-image: linear-gradient(
+      to bottom,
+      rgba(255, 188, 2, 0.52),
+      rgba(255, 209, 6, 0.73)
+    ),
+    url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576346297/image_3_1_n2jbwk.png");
 }
 
 .services-intro h2 {
-  margin-top: -310px;
+  /* margin-top: -330px; */
   color: #ffffff;
 }
 
-/*  */
+/* choose-movers */
 .choose-movers {
   margin-top: 100px;
   margin-bottom: 100px;
@@ -186,13 +193,13 @@ p {
   font-size: 14px;
 }
 
-/*  */
+/* services */
 .services p {
   color: #4f4f4f;
   font-size: 24px;
 }
 
-/*  */
+/* footer */
 .footer {
   margin-top: 100px;
 }
@@ -201,7 +208,359 @@ p {
   height: 5vh;
   width: 5vh;
 }
-.social-links{
-  height:3vh;
-  width: 3vh;
+
+/* Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
+  .card {
+    width: 15rem;
+  }
+
+  .services-text h5 {
+    font-weight: bold;
+    color: #ffb800;
+    font-size: 15px;
+  }
+
+  .services-text h2 {
+    font-weight: normal;
+    color: #4f4f4f;
+    font-size: 40px;
+  }
+
+  .services-text p {
+    color: #4f4f4f;
+    font-size: 15px;
+  }
+
+  .services p {
+    color: #4f4f4f;
+    font-size: 15px;
+  }
+
+  .services {
+    margin-top: 5px !important;
+  }
 }
+
+/* Medium devices (tablets, less than 1009px) */
+@media (max-width: 1009px) {
+  .our-services {
+    margin-top: 5px !important;
+  }
+  .card {
+    width: 12rem;
+  }
+
+  .services-text h5 {
+    font-weight: bold;
+    color: #ffb800;
+    font-size: 12px;
+  }
+
+  .services-text h2 {
+    font-weight: normal;
+    color: #4f4f4f;
+    font-size: 35px;
+  }
+
+  .services-text p {
+    color: #4f4f4f;
+    font-size: 12px;
+  }
+
+  .services p {
+    color: #4f4f4f;
+    font-size: 12px;
+  }
+
+  .services {
+    margin-top: 2px !important;
+  }
+}
+
+/* Small devices (landscape phones, less than 990px) */
+@media (max-width: 990px) {
+  .next-move h2 {
+    font-size: 32px;
+  }
+
+  .movers-text h5 {
+    font-weight: bold;
+    color: #ffb800;
+    font-size: 15px;
+  }
+
+  .movers-text p {
+    font-size: 15px;
+    color: #4f4f4f;
+  }
+
+  .movers-text h2 {
+    font-weight: normal;
+    color: #4f4f4f;
+    font-size: 42px;
+  }
+
+  .movers {
+    margin-top: 140px;
+  }
+
+  .choose-movers {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+
+  .choose-header h5 {
+    font-weight: bold;
+    color: #ffb800;
+    font-size: 15px;
+  }
+
+  .choose-header h2 {
+    font-weight: normal;
+    color: #4f4f4f;
+    font-size: 42px;
+  }
+
+  .choose h2 {
+    font-weight: bold;
+    color: #ffb800;
+    font-size: 42px;
+  }
+
+  .choose h3 {
+    font-weight: bold;
+    color: #4f4f4f;
+    font-size: 30px;
+  }
+
+  .choose p {
+    color: #4f4f4f;
+    font-size: 18px;
+  }
+
+  .choose span {
+    font-weight: bold;
+    color: #ffb800;
+    font-size: 10px;
+  }
+
+  /* services-intro */
+  .services-bg {
+    height: 283px;
+    margin-bottom: 100px;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(255, 188, 2, 0.52),
+        rgba(255, 209, 6, 0.73)
+      ),
+      url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576346297/image_3_1_n2jbwk.png");
+  }
+
+  .services-intro h2 {
+    /* margin-top: -290px; */
+    color: #ffffff;
+    font-size: 33px;
+  }
+}
+
+/* Small devices (landscape phones, less than 845px) */
+@media (max-width: 845px) {
+  .next-move h2 {
+    font-size: 28px;
+  }
+
+  .movers-text h5 {
+    font-weight: bold;
+    color: #ffb800;
+    font-size: 12px;
+  }
+
+  .movers-text p {
+    font-size: 12px;
+    color: #4f4f4f;
+  }
+
+  .movers-text h2 {
+    font-weight: normal;
+    color: #4f4f4f;
+    font-size: 38px;
+  }
+
+  .movers {
+    margin-top: 140px;
+  }
+
+  .choose-movers {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+
+  .choose-header h5 {
+    font-weight: bold;
+    color: #ffb800;
+    font-size: 15px;
+  }
+
+  .choose-header h2 {
+    font-weight: normal;
+    color: #4f4f4f;
+    font-size: 38px;
+  }
+
+  .choose h2 {
+    font-weight: bold;
+    color: #ffb800;
+    font-size: 38px;
+  }
+
+  .choose h3 {
+    font-weight: bold;
+    color: #4f4f4f;
+    font-size: 25px;
+  }
+
+  .choose p {
+    color: #4f4f4f;
+    font-size: 15px;
+  }
+
+  .choose span {
+    font-weight: bold;
+    color: #ffb800;
+    font-size: 16px;
+  }
+
+  /* services-intro */
+  .services-bg {
+    height: 253px;
+    margin-bottom: 100px;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(255, 188, 2, 0.52),
+        rgba(255, 209, 6, 0.73)
+      ),
+      url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576346297/image_3_1_n2jbwk.png");
+  }
+
+  .services-intro h2 {
+    /* margin-top: -290px; */
+    color: #ffffff;
+    font-size: 28px;
+  }
+}
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 844px) {
+  .display {
+    display: none;
+  }
+
+  .d_none .car {
+    width: 250px;
+  }
+}
+
+@media (min-width: 844px) and (max-width: 1844px) {
+  .d_none {
+    display: none;
+  }
+}
+
+@media (max-width: 577px) {
+  .hide {
+    display: none;
+  }
+}
+
+@media (min-width: 577px) {
+  .hide-modal {
+    display: none;
+  }
+}
+
+@media (min-width: 514px) {
+  .hide-im {
+  display: none;
+}
+}
+
+@media (max-width: 514px) {
+  .link_2 {
+  background: #ffb800;
+  border-radius: 4px;
+  color: white;
+  position: fixed;
+  right: 10px;
+}
+
+.link_1 a {
+  color: #000000;
+  margin-right: 40px;
+}
+
+.link_2 a {
+  color: #ffffff;
+}
+
+.logo {
+  margin: 1px!important;
+}
+
+.logo img {
+  width: 130px;
+}
+
+.hide-img {
+  display: none;
+}
+
+.movers {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.choose {
+  display: grid;
+  grid-template-columns: 1fr;
+  text-align: center;
+  grid-gap: 10px;
+  margin-top: 20px;
+}
+
+/* first section */
+.first_section {
+  background: rgba(0, 0, 0, 0.37);
+  background-position: center;
+  height: 450px;
+  background-image: linear-gradient(to bottom, rgba(46, 53, 48, 0.52), rgba(27, 25, 27, 0.73)), url("https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576163777/image_1_d4zjmf.png");
+}
+
+.intro_text {
+  margin-top: 170px;
+}
+
+.intro_text h1 {
+  font-weight: bold;
+  font-size: 2rem;
+  /* line-height: 56px; */
+  color: #ffffff;
+}
+
+.intro_text p {
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 0.7rem;
+}
+
+.intro_text span {
+  color: #ffb800;
+}
+}
+
+
+
+
+
+
+
